--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@
 nav{
     width: 100%;
     height: 75px;
-    background-color: #505d61;
+    background-color: #b2b2b2;
     line-height: 75px;
     padding: 0px 100px;
     position: relative;
-    
-    z-index: 1;
+    /* margin-top: 20px; */
+    /* z-index: 1; */
 }
 nav .logo{
     font-size: 30px;
@@ -35,16 +35,18 @@ nav ul{
 nav ul li{
     display: inline-block;
     list-style: none;
+    
 }
 nav ul li a{
-    color: #fff;
+    color: white;
     text-decoration: none;
     font-size: 18px;
     text-transform: capitalize;
     padding: 0px 22px;
+    letter-spacing: 1.2px;
 }
 nav ul li a:hover{
-    color:steelblue;
+    color:black;
 }
 
 #searchbox{
@@ -75,7 +77,7 @@ nav ul li a:hover{
 
 
 #searchbtn{
-    color: steelblue;
+    color: rgb(124, 122, 122);
     background-color: white;
     font-weight: bold;
     border-radius: 20px;
@@ -111,5 +113,187 @@ td{
 }
 
 
+.login{  
+    position: fixed;
+    width: 25%;
+    margin: 50px 50px;
+    padding: 30px 40px;
+    background: #b2b2b2;  
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;  
+    margin-left: 1022px;
+    overflow: hidden;
+    box-shadow: 2px 2px 4px 1px rgb(88, 87, 87);
+}
 
 
+body
+{
+background-color: whitesmoke;
+background-image: url(app2.jpg);
+
+}
+
+.firstdiv{
+    background-image: url(app1.jpeg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    margin: 50px 70px;
+    padding: 10px 10px;
+    position: fixed;
+    float: left;
+    width: 62%;
+    height: 505px;
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+    box-shadow: 0px 2px 4px 1px rgb(88, 87, 87);
+    overflow: hidden;
+    
+
+}
+
+h2{  
+text-align: right;  
+color: black;  
+padding: 20px;
+ 
+margin-right: 260px;
+}  
+label{  
+color: white; 
+/* color: #484f4f;  */
+font-size: 16px;
+
+
+}  
+#Uname{  
+
+padding: 5px 15px;
+    width: 300px;
+    height: 40px;
+    border-radius: 10px;
+    margin-top: 10px;
+    
+}  
+
+#Uname:hover{
+    background-color:rgb(124, 122, 122);
+    color: white;
+    
+    
+}
+
+#Uname::placeholder{
+    color: rgb(124, 122, 122);
+    font-size: 15px;
+    font-weight: 500;
+    letter-spacing: 1.2px;
+}
+
+#Uname:hover::placeholder{
+    color: white;
+    font-weight:500;
+    letter-spacing: 1.2px;
+}
+
+#Pass{  
+    
+    padding: 5px 15px;
+        width: 300px;
+        height: 40px;
+        border-radius: 10px;
+        margin-top: 10px;
+        letter-spacing: 1.2px;
+    }  
+    
+#Pass:hover{
+        background-color:rgb(124, 122, 122);
+        color: white;
+        
+        
+    }
+    
+#Pass::placeholder{
+        color: rgb(124, 122, 122);
+        font-size: 15px;
+        font-weight: 500;
+    }
+    
+#Pass:hover::placeholder{
+        color: white;
+        font-weight:500;
+    }
+    
+
+
+
+
+
+
+
+#log{
+    color: rgb(124, 122, 122);
+    background-color: white;
+    font-weight: 500;
+    border-radius: 20px;
+    width: 300px;  
+    height: 35px;
+    position: fixed;
+    letter-spacing: 1.5px;
+   
+}
+
+
+#log:hover{
+    color: white;
+    background-color: rgb(124, 122, 122);
+    border-color: black;
+    font-weight: 500;
+    letter-spacing: 1.5px;
+
+}
+
+
+
+
+span{  
+color: #5f6262;  
+font-size: 17px;  
+}  
+
+#email-label, #pass-label{
+    margin-left: 5px;
+    letter-spacing: 1.2px;
+   
+}
+
+#customer, #admin, #employee{
+    margin-top: 2px;
+    color: white;
+    letter-spacing: 1.2px;
+    text-decoration: none;
+}
+
+#customer:hover, #admin:hover, #employee:hover{
+    color: black;
+}
+
+h2{
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    color: white;
+    /* font-size: small; */
+}
+
+
+.head{
+    background-color: white;
+    position: fixed;
+    width: 85%;
+    margin-left: 100px;
+    margin-top: 60px;
+    height: 60%;
+    border-radius: 20px;
+    box-shadow: 1px 2px 2px 2px rgb(88, 87, 87);
+}
